<resources>
    <string name="app_name">PositionFinder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_periodic">PeriodicActivity</string>
    <string name="title_activity_distance_naive">DistanceNaiveActivity</string>
    <string name="title_activity_distance_max_speed">DistanceMaxSpeedActivity</string>
    <string name="title_activity_distance_accelerometer">DistanceAccelerometerActivity</string>
    <string name="title_activity_waypoint_collector">WaypointCollectorActivity</string>
    <string name="toggle_gps">Toggle GPS</string>
    <string name="distance_threshold">Distance threshold (meters)</string>
    <string name="naive_reporting">Naive reporting</string>
    <string name="gps_coordinates">GPS coordinates:</string>
    <string name="max_speed_reporting">Max speed reporting</string>
    <string name="stop_gps">Stop GPS</string>
    <string name="max_speed_input">Max speed in km/h</string>
    <string name="set_max_speed">Set and start</string>
    <string name="current_initial_max_speed">Current max speed: N/A</string>
    <string name="set_distance">Set distance and start</string>
    <string name="current_initial_distance_threshold">Current distance threshold: N/A</string>
    <string name="waypoint_collector">Waypoint collector</string>
    <string name="collect_waypoint">Collect waypoint</string>
    <string name="collect">SET WAYPOINT HERE</string>
    <string name="current_initial_movement">Movement: N/A</string>
    <string name="send_waypoint">Send waypoint</string>
</resources>
