<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dk.au.pp13.positionfinder.DistanceMaxSpeedActivity">

    <TextView
        android:id="@+id/periodic_text"
        android:text="@string/max_speed_reporting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        />

    <EditText
        android:id="@+id/inputFieldTimeInSec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_speed_input"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/inputFieldDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distance_threshold"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_max_speed"
        android:textAllCaps="false"
        android:onClick="setMaxSpeed"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_waypoint"
        android:textAllCaps="false"
        android:onClick="sendWaypoint" />

    <TextView
        android:id="@+id/maxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/current_initial_max_speed"
        />

    <TextView
        android:id="@+id/maxDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/current_initial_distance_threshold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_coordinates"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/gpsCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        />

</LinearLayout>
